# s3_search

./: Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/ISSUE_TEMPLATE/workflows/: release.yml  test.yml
.github/script/: prs.js
.github/workflows/: auto-assign-author.yml  release.yml  tag.yml  test.yml
src/: main.rs
